# dt

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: README.md  main.py
app/api/: routes.py
app/config/: settings.py
app/evaluation/: evaluator.py
app/ingestion/: chunking.py
app/models/: schemas.py
app/prompts/: registry.py
app/services/: agent.py  embedding.py  llm.py  memory.py  retriever.py  vector_store.py
app/tools/: base.py  knowledge_base.py  ticketing.py
app/utils/: logging.py
tests/: test_agent.py  test_chunking.py  test_llm.py  test_memory.py  test_retriever.py  test_vector_store.py
