[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-agentic-rag"
version = "0.1.0"
description = "Production-oriented agentic AI support system with RAG, fallback ticketing, and evaluation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docker*", "tests*"]
